<resources>
    <string name="app_name">EtherWallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_language">Language</string>
    <!--menu items-->
    <!--string name="generateWallet">Generate Wallet</string-->
    <string name="sendEther">Send Ether</string>
    <string name="deployContract">Deploy Contract</string>
    <string name="help">Help</string>
    <string name="title_activity_password">Enter key password</string>
    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_ok">Ok</string>
    <string name="action_sign_in_short">Open key</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="title_activity_sell">Sell</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="scanner_activity">Scan QR-code</string>
    <string name="choose_address">Choose address</string>
    <string name="toast_crash">Application error!</string>
    <string name="bar_codes">Barcodes</string>
    <string name="importWalletKey">Import Key</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="name">Name</string>
    <string name="barCode">Barcode</string>
    <string name="price">Price</string>
    <string name="add_button">Add</string>
    <string name="total">Total:</string>
    <string name="scanner_bar_code_activity">Barcode scanning</string>
    <string name="success">SUCCESS</string>
    <string name="payment_successful">Payment successful</string>
    <string name="insufficient_funds">Received insufficient funds</string>
    <string name="not_received_payment">Payment was not received within 2min</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_price">Enter price</string>
    <string name="product_not_found">Product not found</string>
    <string name="sell_item">Product</string>
    <string name="added_item">Product has been added</string>
    <string name="date">Date:</string>
    <string name="sum">Value:</string>
    <string name="shopping_list">Shopping list</string>
    <string name="scan_sell_item_help"><![CDATA[Please scan the QR-code using EtherWallet->Buy]]></string>
    <string name="backupPkToEmail">Wallet backup</string>
    <string name="accountInfoLabel">Account Information:</string>
    <string name="addressLabel">Account Address:</string>
    <string name="valueLabel">Amount to Send:</string>
    <string name="balanceLabel">Account Balance:</string>
    <string name="sendLabel">Send transaction</string>
    <string name="gasLabel">Gas Limit:</string>
    <string name="generateTransaction">Generate Transaction</string>
    <string name="enter_value">Ether value!</string>
    <string name="changePassword">change password</string>
    <string name="create">Add wallet</string>
    <string name="too_short_password">Too short password!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="wallets">Wallets</string>
    <string name="success_contract_deploy">Contract has been deployed successfully!</string>
    <string name="contract_address">Contract address:</string>
    <string name="operation_timeout">operation timeout</string>
    <string name="private_key">Private key:</string>
    <string name="private_key_short">Private key</string>
    <string name="key_file">Key file</string>
    <string name="delete_wallet">Delete selected wallet?</string>
    <string name="confirm">Please confirm</string>
    <string name="receivePayment">Receive payment</string>
    <string name="amount">Amount to Receive:</string>
    <string name="receive">receive</string>
    <string name="address_copied">Address copied</string>
    <string name="buy_domain_tooltip">No more unreadable Ethereum addresses! Click here to buy your own domain!</string>
    <string name="search">Search</string>
    <string name="domain_unavailable">Domain is anavailable</string>
    <string name="year">year</string>
    <string name="transactions">Transactions</string>
    <string name="choose_country">Choose country</string>
    <string name="too_long_value">Too long value</string>
    <string name="publish">Publish</string>
    <string name="too_short_value">Too short value</string>
    <string name="publish_barcodes">Publish Barcodes</string>
    <string name="restore_barcodes">Restore Barcodes</string>
    <string name="received">Received</string>
    <string name="messages">Messages</string>
    <string name="exchange">Exchange</string>
    <string name="top_up">Top up</string>
    <string name="withdraw">Withdraw</string>
    <string name="in_progress">...</string>
    <string name="or">or</string>
    <string name="pk_warning">WARNING: If someone else has your private key then they can indeed send ether from your account. Just like if someone has your password to your email, they can read and send your email, or the password to your bank account, they could make transfers. You could scan the QR-code version of your private key to import to an another device.</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="tokens">Tokens:</string>
    <string name="network_error">Network error, try again later</string>
    <string name="domain_available">Domain is available</string>
    <string name="transactionFee">Transaction fee:</string>
    <string name="cheaper">Cheaper</string>
    <string name="faster">Faster</string>
</resources>
