<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_language"
        android:orderInCategory="100"
        android:title="@string/action_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/bar_code_list"
        android:orderInCategory="100"
        android:title="@string/bar_codes"
        app:showAsAction="never" />
    <item
        android:id="@+id/publish"
        android:orderInCategory="100"
        android:title="@string/publish_barcodes"
        app:showAsAction="never" />
    <item
        android:id="@+id/restore"
        android:orderInCategory="100"
        android:title="@string/restore_barcodes"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
