<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:paddingTop="20dp"
        android:inputType="textPersonName"
        android:text="@string/accountInfoLabel"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:paddingTop="20dp"
        android:inputType="textPersonName"
        android:text="@string/addressLabel"
        android:textSize="15dp" />
    <android.widget.TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="25px"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:id="@+id/address"
        android:background="@drawable/spinner_right"
        android:onClick="onClickAddressList"
        android:focusable="false"
        android:textSize="15dp"
        android:ellipsize="middle"
        android:clickable="true"
        android:maxLines="1"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:textColor="@color/buttonColor"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:paddingTop="20dp"
        android:inputType="textPersonName"
        android:text="@string/valueLabel"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/enterValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        android:hint="ETH"
        android:gravity="center_vertical"
        android:imeOptions="flagNoExtractUi"
        android:background="@color/colorPrice"/>
    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendEther"
        android:textAlignment="center"
        android:layout_marginBottom="20px"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAllCaps="false"
        android:background="@drawable/blue_button"
        android:textColor="@color/colorPrice"/>
</LinearLayout>