<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="20dp"
                android:inputType="textPersonName"
                android:text="@string/accountInfoLabel"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="20dp"
                android:inputType="textPersonName"
                android:text="@string/addressLabel"
                android:textSize="15dp" />
            <android.widget.TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp"
                android:background="@drawable/spinner_right"
                android:onClick="onClickAddressList"
                android:focusable="false"
                android:textSize="15dp"
                android:ellipsize="middle"
                android:clickable="true"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/buttonColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="20dp"
                android:inputType="textPersonName"
                android:text="@string/balanceLabel"
                android:textSize="15dp"
                />
            <TextView
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="20dp"
                android:textColor="@color/primary_text"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="20dp"
                android:inputType="textPersonName"
                android:text="@string/sendLabel"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/idIcon"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:background="@android:color/transparent"
                    />
                <EditText
                    android:id="@+id/addressTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp"
                    android:hint="0x6dcfe076f96a3dc4ea32aaebd8ddefab39c8e1ae"
                    android:imeOptions="flagNoExtractUi"
                    android:textSize="12dp"
                    android:maxLines="1"
                    android:lines="1"
                    android:enabled="false"
                    android:backgroundTint="@color/secondary_text"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="20dp"
                android:inputType="textPersonName"
                android:text="@string/valueLabel"
                android:textSize="15dp"
                />
            <EditText
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                android:hint="ETH"
                android:gravity="center_vertical"
                android:imeOptions="flagNoExtractUi"
                android:background="@color/colorPrice"
                android:enabled="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="20dp"
                android:text="@string/gasLabel"
                android:textSize="15dp"
                />
            <EditText
                android:id="@+id/gasLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="number"
                android:textSize="20dp"
                android:text="50000"
                android:gravity="center_vertical"
                android:imeOptions="flagNoExtractUi"
                android:background="@color/colorPrice"
                android:maxLines="1"
                android:lines="1"/>
            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generateTransaction"
                android:textAlignment="center"
                android:layout_marginBottom="20px"
                android:layout_marginTop="20px"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAllCaps="false"
                android:background="@drawable/blue_button"
                android:textColor="@color/colorPrice"
                android:onClick="onClickGenerateTransaction"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>