<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SendEtherActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/bg"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/etherwallet_logo"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="15dp"
                android:text="@string/accountInfoLabel"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="15dp"
                android:inputType="textPersonName"
                android:text="@string/addressLabel"
                android:textSize="15dp" />
            <android.widget.TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="12dp"
                android:paddingRight="20dp"
                android:paddingBottom="12dp"
                android:background="@drawable/spinner_right"
                android:onClick="onClickAddressList"
                android:focusable="false"
                android:textSize="15dp"
                android:ellipsize="middle"
                android:clickable="true"
                android:maxLines="1"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/buttonColor"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:inputType="textPersonName"
                android:text="@string/balanceLabel"
                android:textSize="15dp"
                />
            <TextView
                android:id="@+id/balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:textColor="@color/primary_text"
                android:textSize="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="15dp"
                android:inputType="textPersonName"
                android:text="@string/sendLabel"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="8">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:weightSum="2"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/qr_code"
                        android:padding="3dp"
                        android:onClick="onClickScanQRCode"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"/>
                    <ImageButton
                        android:id="@+id/idIcon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_cycle"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        />
                </LinearLayout>
                <AutoCompleteTextView
                    android:id="@+id/addressTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="address"
                    android:imeOptions="flagNoExtractUi"
                    android:textSize="12dp"
                    android:lines="2"
                    android:layout_weight="6"
                    android:backgroundTint="@color/secondary_text"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="15dp"
                android:inputType="textPersonName"
                android:text="@string/valueLabel"
                android:textSize="15dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="7">
                <EditText
                    android:id="@+id/value"
                    android:layout_width="0dp"
                    android:layout_weight="5.3"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:inputType="numberDecimal"
                    android:textSize="20dp"
                    android:gravity="center_vertical"
                    android:imeOptions="flagNoExtractUi"
                    android:background="@color/colorPrice"/>

                <android.widget.TextView
                    android:id="@+id/token"
                    android:layout_width="0dp"
                    android:layout_weight="1.7"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20px"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingLeft="5dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/spinner_right"
                    android:onClick="onClickTokenList"
                    android:focusable="false"
                    android:textSize="20dp"
                    android:ellipsize="marquee"
                    android:clickable="true"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/buttonColor"
                    android:text="ETH"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:text="@string/gasLabel"
                android:textSize="15dp"
                />
            <EditText
                android:id="@+id/gasLimit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:inputType="number"
                android:textSize="20dp"
                android:text="21000"
                android:gravity="center_vertical"
                android:imeOptions="flagNoExtractUi"
                android:background="@color/colorPrice"
                android:maxLines="1"
                android:lines="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:text="@string/transactionFee"
                android:textSize="15dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="7">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:text="@string/cheaper"/>
                <TextView
                    android:id="@+id/transactionFee"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textAlignment="center"
                    android:text="..."/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:text="@string/faster"/>
            </LinearLayout>
            <SeekBar
                android:id="@+id/gasPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendEther"
                android:textAlignment="center"
                android:layout_marginBottom="20px"
                android:layout_marginTop="20px"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAllCaps="false"
                android:background="@drawable/blue_button"
                android:textColor="@color/colorPrice"
                android:onClick="onClickGenerateTransaction"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>